# impersonation

./: .pre-commit-config.yaml  README.rst  pyproject.toml  tox.ini
.github/workflows/: ci.yaml  release-drafter.yaml
src/impersonation/: __init__.py  core.py  utils.py
tests/: test_impersonate.py
