[tool.poetry]
name = "impersonation"
version = "0.1.1"
description = "Utility for user impersonation by running instructions under given user"
authors = ["Renato Damas <rena2damas@gmail.com>"]
license = "MIT"
readme = "README.rst"
packages = [
    { include = "*", from = "src" }
]
homepage = ""
repository = "https://github.com/rena2damas/impersonation"
documentation = ""
keywords = [
    "process",
    "multiprocessing",
    "impersonate",
    "python",
    "python3"
]
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10"
]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
coverage = "^6.4.4"
pre-commit = "^2.20.0"
pytest = "^7.1.3"
pytest-mock = "^3.10.0"

[tool.poetry.urls]
issues = "https://github.com/rena2damas/impersonation/issues"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
